Update NeoForge transformers